--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="date" class="date-element js-date-element">
     <button onclick="addTodo()">Add</button>
   </div>
-  <div></div>
+  <div class="todo-list-div"></div>
 
   <script src="script.js"></script>
 </body>
