uesd addEventListener in place of onclick

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="input-container">
     <input placeholder="New Todo" class="input-element js-input-element">
     <input type="date" class="date-element js-date-element">
-    <button onclick="addTodo()">Add</button>
+    <button class="add-button js-add-button">Add</button>
   </div>
   <div class="todo-list-div"></div>
 
