--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="title">ToDo List App</div>
@@ -12,7 +13,7 @@
     <input type="date" class="date-element js-date-element">
     <button class="add-button js-add-button">Add</button>
   </div>
-  <div class="todo-list-div"></div>
+  <div class="todo-list-div js-todo-list-div"></div>
 
   <script src="script.js"></script>
 </body>
